...
        android:id="@+id/status_code"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:textSize="12sp"
        tools:text="200"/>

      <ImageView
        android:layout_width="5dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:src="@drawable/circle"/>
...
        android:id="@+id/status_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginStart="5dp"
        android:textSize="12sp"
        tools:text="OK"/>
    </LinearLayout>

    <TextView
      android:id="@+id/error_text"
      android:visibility="gone"
      android:layout_width="wrap_content"
...
