...
  <item
    android:id="@+id/search"
    android:title="@string/search_title"
    android:icon="@android:drawable/ic_menu_search"
    app:showAsAction="ifRoom"/>
  <item
    android:id="@+id/delete_records_menu"
    app:showAsAction="ifRoom"
    android:icon="@android:drawable/ic_menu_delete"
    android:title="@string/delete_all_records"/>
  <item
    android:id="@+id/done_menu"
    app:showAsAction="ifRoom"
...
