...

  <Button
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/fetch_posts"
    android:onClick="fetchPosts"
    android:text="GET" />

  <Button
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/fetch_posts_fail"
    android:onClick="fetchPostsFail"
...
